Source/WebCore/css/CSSParserValues.cpp
@@ -230,5 +230,17 @@ void CSSParserSelector::prependTagSelector(const QualifiedName& tagQName, bool t
     m_selector->m_relation = CSSSelector::SubSelector;
 }
 
+#if ENABLE(SHADOW_DOM)
+CSSParserSelector* CSSParserSelector::findDistributedPseudoElementSelector() const
+{
+    CSSParserSelector* selector = const_cast<CSSParserSelector*>(this);
+    do {
+        if (selector->isDistributedPseudoElement())
+            return selector;
+    } while ((selector = selector->tagHistory()));
+    return 0;
+}
+#endif
+
 }
 
