Source/WebCore/css/CSSParserValues.h
@@ -190,6 +190,7 @@ public:
     CSSParserSelector* functionArgumentSelector() const { return m_functionArgumentSelector; }
     void setFunctionArgumentSelector(CSSParserSelector* selector) { m_functionArgumentSelector = selector; }
     bool isDistributedPseudoElement() const { return m_selector->isDistributedPseudoElement(); }
+    CSSParserSelector* findDistributedPseudoElementSelector() const;
 #endif
 
     CSSSelector::PseudoType pseudoType() const { return m_selector->pseudoType(); }
@@ -200,6 +201,7 @@ public:
 
     CSSParserSelector* tagHistory() const { return m_tagHistory.get(); }
     void setTagHistory(PassOwnPtr<CSSParserSelector> selector) { m_tagHistory = selector; }
+    void clearTagHistory() { m_tagHistory.clear(); }
     void insertTagHistory(CSSSelector::Relation before, PassOwnPtr<CSSParserSelector>, CSSSelector::Relation after);
     void appendTagHistory(CSSSelector::Relation, PassOwnPtr<CSSParserSelector>);
     void prependTagSelector(const QualifiedName&, bool tagIsForNamespaceRule = false);
